Consolidated all Event tables: Each includes an action column to designate the type of event that occurred. That's the only additional information otherwise differentiating event tables.

--- a/IdeaBunker/IdeaBunker.csproj
+++ b/IdeaBunker/IdeaBunker.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Private\Data\" />
-    <Folder Include="Areas\Private\Models\" />
+    <Folder Include="Areas\Private\Models\Events\" />
     <Folder Include="Areas\Public\Controllers\" />
     <Folder Include="Areas\Public\Views\" />
   </ItemGroup>
