--- a/IdeaBunker/appsettings.json
+++ b/IdeaBunker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdeaBunkerContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdeaBunker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdeaBunkerContextConnection": "Server=(local)\\sqlexpress;Database=IdeaBunkerDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
