Updates to Context classes: Reorganized each area's context into partial classes; then, each 'joins' with the context class in the main app. Also, organized Model builder according to entities.

--- a/IdeaBunker/appsettings.json
+++ b/IdeaBunker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdeaBunkerContextConnection": "Server=(local)\\sqlexpress;Database=IdeaBunkerDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "IdeaBunkerContextConnection": "Server=(local)\\sqlexpress;Database=IdeaBunker;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
