Created Permissions partial classes. Updated User Seed file.

--- a/IdeaBunker/IdeaBunker.csproj
+++ b/IdeaBunker/IdeaBunker.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Private\Permissions\" />
     <Folder Include="Areas\Public\Views\" />
   </ItemGroup>
 
